Two null box iterators from different paths fail to compare equal https://bugs.webkit.org/show_bug.cgi?id=232093

Patch by Gabriel Nava Marino <gnavamarino@apple.com> on 2021-10-21
Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/clip/clip-hit-null-iterator-path-comparison.html

* layout/integration/InlineIteratorBox.cpp:
(WebCore::InlineIterator::BoxIterator::operator== const):

LayoutTests:

* fast/clip/clip-hit-null-iterator-path-comparison-expected.txt: Added.
* fast/clip/clip-hit-null-iterator-path-comparison.html: Added.

Canonical link: https://commits.webkit.org/243385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284665 268f45cc-cd09-0410-ab3c-d52691b4dbfc